# rust-store-api

./: .env  Cargo.toml
migrations/2020-01-06-004357_create_products/: up.sql
migrations/2020-01-09-001347_create_users/: up.sql
migrations/2020-01-23-155924_add_description_to_products/: down.sql  up.sql
migrations/2020-01-23-161735_add_tsvector_column_to_products/: down.sql  up.sql
src/: db_connection.rs  errors.rs  lib.rs  main.rs  schema.rs
src/handlers/: authentication.rs  mod.rs  products.rs  register.rs
src/models/: product.rs  user.rs
src/utils/: jwt.rs
tests/: product_test.rs
tests/common/: db_connection.rs
