[package]
name = "mystore"
version = "0.1.0"
authors = ["Abey Onalaja <Abey.onalaja@gmail.com>"]
edition = "2018"

[lib]
name = "mystore_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0.0-beta"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono" ] }

dotenv = "0.14.0"
dotenv_codegen="0.14.0"
#serde = { version = "1.0", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.1"
jsonwebtoken = "6"
bcrypt = "0.4.0"
chrono = { version = "0.4.6", features = ["serde"] }
csrf-token = { git = "https://git@github.com/3dom-co-jp/csrf-token.git", branch="v0.2.x" }
hex = "0.3.2"
actix-identity = "0.1.0"
actix-cors = "0.1.0"
env_logger = "0.6.1"
log = "0.4.6"
actix-http = "0.2.1"
diesel_full_text_search = "1.0.1"

[dev-dependencies]
bytes = "0.4"
actix-http-test = "0.2.0"
